# fast-plaid

./: Cargo.toml  Makefile  pyproject.toml
docs/: UNIFICATION_PLAN.md
python/fast_plaid/: __init__.py
python/fast_plaid/search/: fast_plaid.py  load.py
rust/: lib.rs  profile.rs
rust/index/: create.rs  maxivf_cagra.rs  mod.rs  update.rs
rust/search/: load.rs  search.rs
rust/utils/: cagra_metric.rs  mod.rs  residual_codec.rs  tensor_finite.rs
rust/utils/centroid_index/: hnsw_backend.rs  mod.rs
tests/: test.py
