[package]
name = "fast_plaid_rust"
version = "1.4.6"
edition = "2021"
build = "build.rs"

[lib]
name = "fast_plaid_rust"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[features]
default = []
cagra = ["dep:cuvs", "dep:ndarray"]

[dependencies]
anyhow = "1.0.98"
tch = { version = "0.20.0" }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libc = "0.2.172"
parking_lot = "0.12.3"
once_cell = "1.21.3"
indicatif = "0.18.2"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pyo3-tch = "0.20.0"
rand = "0.9.1"
regex = "1.11.1"
rayon = "1.11.0"
cuvs = { version = "26.2.0", optional = true }
ndarray = { version = "0.15.6", optional = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "errhandlingapi"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
