[build-system]
requires = [
  "maturin >= 1.8.6",
  "numpy >= 1.26.4",
  "setuptools >= 78.1.1",
  "torch >= 2.7.0",
]
build-backend = "maturin"

[project]
name = "fast_plaid"
version = "1.4.6"
description = "Fast Plaid."
authors = [
  { name = "Raphael Sourty, LightOn", email = "raphael.sourty@lighton.ai" },
]
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "fastkmeans == 0.5.0",
  "joblib>=1.5.1",
  "torch >= 2.7.0",
  "numpy >= 1.26.4",
  "filelock>=3.20.0",
  "usearch>=2.21.0",
]

[project.optional-dependencies]
dev = [
  "maturin >= 1.8.6",
  "pytest-cov >= 5.0.0",
  "pytest >= 7.4.4",
  "ruff >= 0.1.15",
  "pre-commit >= 3.0.0",
  "beir>=2.1.0",
  "ranx>=0.3.20",
]

[project.urls]
Homepage = "https://github.com/lightonai/fast-plaid"
Documentation = "https://github.com/lightonai/fast-plaid"
Repository = "https://github.com/lightonai/fast-plaid"

[tool.include]
include = ["Cargo.toml", "pyproject.toml", "README.md", "rust/*"]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fast_plaid.fast_plaid_rust"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::RuntimeWarning",
  "ignore::UserWarning",
]
addopts = [
  "--doctest-modules",
  "--verbose",
  "-ra",
  "--cov-config=.coveragerc",
  "-m not web and not slow",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "NUMBER"]
norecursedirs = ["build", "docs", "node_modules"]
markers = [
  "web: tests that require using the Internet",
  "slow: tests that take a long time to run",
  "faiss_hnsw: centroid HNSW integration (needs libfaiss + fast_plaid_rust built with --features hnsw)",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = [
  "ANN001",
  "TID252",
  "FBT002",
  "ANN201",
  "G004",
  "BLE001",
  "S112",
  "PTH123",
  "S101",
  "ANN204",
  "PLR2004",
  "D104",
  "D100",
  "PTH118",
  "PTH110",
  "PTH103",
  "S311",
  "T201",
  "FBT001",
  "D107",
  "PTH107",
  "PTH109",
  "S603",
  "S607",
  "PGH004",
  "PLC0206",
  "PLW1508",
  "INP001",
  "FIX002",
  "TD003",
  "PGH003",
  "ANN401",
  "PERF401",
  "D203",
  "D213",
  "COM812",
  "N812",
  "PTH207",
  "PTH120",
  "SIM105",
  "PERF203",
  "TRY203",
  "TRY201",
  "PTH112",
  "B905",
  "UP037",
  "PLC0415",
  "EM101",
  "TRY003",
  "EM102",
  "PLR0913",
  "PLR0915",
  "C901",
]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
